--- a/lesson_1/skeleton.html
+++ b/lesson_1/skeleton.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<!-- linthtml-configure tag-bans="false" -->
+<html lang="en-US">
   <head>
     <title>title goes here</title>
     <meta charset="utf-8">
+    <style>
+      html {
+        box-sizing: border-box;
+      }
+
+      *, *::after, *::before {
+        box-sizing: inherit;
+      }
+    </style>
   </head>
+
   <body>
   </body>
 </html>
