--- a/lesson_4/nutrition_facts.html
+++ b/lesson_4/nutrition_facts.html
@@ -18,13 +18,20 @@
         margin-bottom: 5px;
       }
 
-      h1 {
-        font-family: 'Franklin Gothic Medium', Arial, sans-serif;
-        font-size: 3.75rem;
+      header p {
         margin: 0;
       }
 
-      p {
+      main p {
+        font-size: 1.55rem;
+        padding-left: 1.1rem;
+        text-indent: -1.1rem;
+        margin: 15px 0;
+      }
+
+      h1 {
+        font-family: 'Franklin Gothic Medium', Arial, sans-serif;
+        font-size: 3.75rem;
         margin: 0;
       }
 
@@ -38,30 +45,20 @@
         text-align: right;
         padding-top: 10px;
         font-family: 'Helvetica Black', Arial, sans-serif;
-      }
-
-      tr {
         border-bottom: 1px solid black;
       }
 
       td {
         padding: 2px 0;
+        border-bottom: 1px solid black;
       }
 
       td:first-child {
         text-align: left;
       }
 
-      td:nth-child(2) {
+      td:last-child {
         text-align: right;
-      }
-
-      tr:last-child {
-        border-bottom: 0;
-      }
-
-      .subcategory {
-        padding-left: 2rem;
       }
 
       table:first-of-type {
@@ -76,6 +73,38 @@
       table:first-of-type td {
         padding: 5px 0;
       }
+
+      table:nth-child(2) .subcategory td:first-child {
+        padding-left: 11px;
+        border: 0;
+      }
+
+      table:last-child {
+        font-size: 1.4rem;
+        border: 0;
+      }
+
+      table:last-child tr {
+        border: 0;
+      }
+
+      table:last-child tr:first-child {
+        border-bottom: 1px solid black;
+      }
+
+      table:last-child .subcategory td:first-child {
+        text-indent: 2rem;
+      }
+
+      table:last-child td {
+        width: 15%;
+        border: 0;
+        text-align: left;
+      }
+
+      table:last-child td:nth-child(2) {
+        text-align: center;
+      }
     </style>
   </head>
 
@@ -87,73 +116,134 @@
         <p>Servings Per Container About 8</p>
       </header>
 
-      <table>
-        <tr>
-          <th>Amount Per Serving</th>
-        </tr>
-        <tr>
-          <td><strong>Calories</strong> 230</td>
-          <td>Calories from Fat 40</td>
-        </tr>
-      </table>
+      <main>
+        <table>
+          <tr>
+            <th colspan="2">Amount Per Serving</th>
+            <th></th>
+          </tr>
+          <tr>
+            <td><strong>Calories</strong> 230</td>
+            <td>Calories from Fat 40</td>
+          </tr>
+        </table>
 
-      <table>
-        <tr>
-          <th colspan="2">% Daily Value*</th>
-        </tr>
-        <tr>
-          <td><strong>Total Fat</strong> 8g</td>
-          <td><strong>12%</strong></td>
-        </tr>
-        <tr>
-          <td class="subcategory">Saturated Fat 1g</td>
-          <td><strong>5%</strong></td>
-        </tr>
-        <tr>
-          <td class="subcategory"><em>Trans</em> Fat 0g</td>
-        </tr>
-        <tr>
-          <td><strong>Cholesterol</strong> 0mg</td>
-          <td><strong>0%</strong></td>
-        </tr>
-        <tr>
-          <td><strong>Sodium</strong> 160mg</td>
-          <td><strong>7%</strong></td>
-        </tr>
-        <tr>
-          <td><strong>Total Carbohydrate</strong> 37g</td>
-          <td><strong>12%</strong></td>
-        </tr>
-        <tr>
-          <td class="subcategory">Dietary Fiber 4g</td>
-          <td><strong>16%</strong></td>
-        </tr>
-        <tr>
-          <td class="subcategory">Sugars 1g</td>
-        </tr>
-        <tr>
-          <td><strong>Protein</strong> 3g</td>
-        </tr>
-      </table>
+        <table>
+          <tr>
+            <th colspan="3">% Daily Value*</th>
+          </tr>
+          <tr>
+            <td colspan="2"><strong>Total Fat</strong> 8g</td>
+            <td><strong>12%</strong></td>
+          </tr>
+          <tr class="subcategory">
+            <td></td>
+            <td>Saturated Fat 1g</td>
+            <td><strong>5%</strong></td>
+          </tr>
+          <tr class="subcategory">
+            <td></td>
+            <td><em>Trans</em> Fat 0g</td>
+            <td></td>
+          </tr>
+          <tr>
+            <td colspan="2"><strong>Cholesterol</strong> 0mg</td>
+            <td><strong>0%</strong></td>
+          </tr>
+          <tr>
+            <td colspan="2"><strong>Sodium</strong> 160mg</td>
+            <td><strong>7%</strong></td>
+          </tr>
+          <tr>
+            <td colspan="2"><strong>Total Carbohydrate</strong> 37g</td>
+            <td><strong>12%</strong></td>
+          </tr>
+          <tr class="subcategory">
+            <td></td>
+            <td>Dietary Fiber 4g</td>
+            <td><strong>16%</strong></td>
+          </tr>
+          <tr class="subcategory">
+            <td></td>
+            <td>Sugars 1g</td>
+            <td></td>
+          </tr>
+          <tr>
+            <td colspan="2"><strong>Protein</strong> 3g</td>
+            <td></td>
+          </tr>
+        </table>
 
-      <table>
-        <tr>
-          <td>Vitamin A</td>
-          <td>10%</td>
-        </tr>
-        <tr>
-          <td>Vitamin C</td>
-          <td>8%</td>
-        </tr>
-        <tr>
-          <td>Calcium</td>
-          <td>20%</td>
-        </tr>
-        <tr>
-          <td>Iron</td>
-          <td>45%</td>
-        </tr>
-      </table>
+        <table>
+          <tr>
+            <td>Vitamin A</td>
+            <td>10%</td>
+          </tr>
+          <tr>
+            <td>Vitamin C</td>
+            <td>8%</td>
+          </tr>
+          <tr>
+            <td>Calcium</td>
+            <td>20%</td>
+          </tr>
+          <tr>
+            <td>Iron</td>
+            <td>45%</td>
+          </tr>
+        </table>
+
+        <p>
+          * Percent Daily Values are bassed on a 2,000 calorie diet.
+            Your daily value may be higher or lower depending on your
+            calorie needs.
+        </p>
+
+        <table>
+          <tr>
+            <td></td>
+            <td>Calories:</td>
+            <td>2,000</td>
+            <td>2,500</td>
+          </tr>
+          <tr>
+            <td>Total Fat</td>
+            <td>Less than</td>
+            <td>65g</td>
+            <td>80g</td>
+          </tr>
+          <tr class="subcategory">
+            <td>Sat Fat</td>
+            <td>Less than</td>
+            <td>20g</td>
+            <td>25g</td>
+          </tr>
+          <tr>
+            <td>Cholesterol</td>
+            <td>Less than</td>
+            <td>300mg</td>
+            <td>300mg</td>
+          </tr>
+          <tr>
+            <td>Sodium</td>
+            <td>Less than</td>
+            <td>2,400mg</td>
+            <td>2,400mg</td>
+          </tr>
+          <tr>
+            <td>Total Carbohydrate</td>
+            <td></td>
+            <td>300g</td>
+            <td>375g</td>
+          </tr>
+          <tr class="subcategory">
+            <td>Dietary Fiber</td>
+            <td></td>
+            <td>25g</td>
+            <td>30g</td>
+          </tr>
+        </table>
+      </main>
     </figure>
   </body>
 </html>
