Matched the appearance a little closer to example, and cleaned up / organized the style element. Linted and validated. Ready for a code review.

--- a/lesson_4/nutrition_facts.html
+++ b/lesson_4/nutrition_facts.html
@@ -41,6 +41,28 @@
         border-top: 15px solid black;
       }
 
+      footer table {
+        font-size: 1.4rem;
+        border: 0;
+        margin-bottom: 3px;
+      }
+
+      figure > table:first-of-type {
+        border-top: 30px solid black;
+      }
+
+      figure > table:nth-child(4) {
+        border-top: 20px solid black;
+      }
+
+      footer table tr {
+        border: 0;
+      }
+
+      footer table tr:first-child {
+        border-bottom: 1px solid black;
+      }
+
       th {
         text-align: right;
         padding-top: 10px;
@@ -48,19 +70,17 @@
         border-bottom: 1px solid black;
       }
 
+      figure > table:first-of-type th {
+        text-align: left;
+        padding: 10px 0;
+      }
+
       td {
         padding: 2px 0;
         border-bottom: 1px solid black;
       }
 
-      footer > table {
-        font-size: 1.4rem;
-        border: 0;
-        margin-bottom: 10px;
-      }
-
-      footer > table td {
-        width: 15%;
+      footer td {
         border: 0;
         text-align: left;
       }
@@ -69,36 +89,23 @@
         text-align: left;
       }
 
-      figure > table:first-of-type {
-        border-top: 30px solid black;
+      footer td:first-child {
+        width: 37%;
       }
 
-      figure > table:first-of-type th {
-        text-align: left;
-        padding: 10px 0;
+      footer td:nth-child(2) {
+        width: 21%;
       }
 
       figure > table:first-of-type td {
         padding: 5px 0;
       }
 
-      footer > table tr {
-        border: 0;
-      }
-
-      footer > table tr:first-child {
-        border-bottom: 1px solid black;
-      }
-
       figure > table td:last-child {
         text-align: right;
       }
 
-      footer > table td:nth-child(2) {
-        text-align: center;
-      }
-
-      footer > table .subcategory td:first-child {
+      footer .subcategory td:first-child {
         text-indent: 2rem;
       }
 
