I caught something with the borders being slightly off on the subcategory rows, fixed it, linted, validated.

--- a/lesson_4/nutrition_facts.html
+++ b/lesson_4/nutrition_facts.html
@@ -53,6 +53,7 @@
 
       figure > table:nth-child(4) {
         border-top: 20px solid black;
+        border-bottom: 1px solid black;
       }
 
       footer table tr {
@@ -67,7 +68,6 @@
         text-align: right;
         padding-top: 10px;
         font-family: 'Helvetica Black', Arial, sans-serif;
-        border-bottom: 1px solid black;
       }
 
       figure > table:first-of-type th {
@@ -77,7 +77,7 @@
 
       td {
         padding: 2px 0;
-        border-bottom: 1px solid black;
+        border-top: 1px solid black;
       }
 
       footer td {
