--- a/lesson_4/nutrition_facts.html
+++ b/lesson_4/nutrition_facts.html
@@ -23,7 +23,7 @@
       }
 
       footer p {
-        font-size: 1.55rem;
+        font-size: 1.58rem;
         padding-left: 1.1rem;
         text-indent: -1.1rem;
         margin: 15px 0;
@@ -203,7 +203,7 @@
 
       <footer>
         <p>
-          * Percent Daily Values are bassed on a 2,000 calorie diet.
+          * Percent Daily Values are based on a 2,000 calorie diet.
             Your daily value may be higher or lower depending on your
             calorie needs.
         </p>
