Finished some practice problems/exercises.

--- a/lesson_1/skeleton.html
+++ b/lesson_1/skeleton.html
@@ -5,6 +5,7 @@
     <title>title goes here</title>
     <meta charset="utf-8">
     <style>
+      /* border-box reset */
       html {
         box-sizing: border-box;
       }
